--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,14 @@
+<head>
+    <style>
+        .panel{
+             
+      background-color:#00bfff;
+      border:2px solid #660066;
+      border-radius:10px 40px;
+        }
+      
+    </style>
+</head>
     <div class="container">
         <div class="row">
           <% @posts.each do |post| %>
