--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,14 @@
+<head>
+  <style>
+    
+    .panel-body{
+      
+      background-color:#00bfff;
+      border:2px solid #660066;
+      border-radius:10px 40px;
+    }
+  </style>
+</head>
 <div class="panel panel-default widget">
 
     <div class="panel-body">
