--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,14 @@
+<head>
+  <style>
+    
+    .field{
+      text-align:center;
+      background-color:#00bfff;
+      border:2px solid #660066;
+      border-radius:10px 40px;
+    }
+  </style>
+</head>
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
