--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,43 @@
+<head>
+  <style>
+    .form-group {
+       text-align:center;
+      background-color:#00bfff;
+      border:2px solid #660066;
+      border-radius:10px 40px;
+      
+    }
+    
+  </style>
+</head>
 <div class="panel panel-default widget">
 <div class="panel-body">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="form-group">
-    <%= f.text_field :name,class:"form-control",placeholder:"İsminiz" %>
+    <%= f.text_field :name,placeholder:"İsminiz" %>
   </div>
 
   <div class="form-group">
-    <%= f.email_field :email, autofocus: true,class:"form-control",placeholder:"Email Adresiniz" %>
+    <%= f.email_field :email, autofocus: true,placeholder:"Email Adresiniz" %>
   </div>
 
   <div class="form-group">
-    <%= f.password_field :password, autocomplete: "off",class:"form-control",placeholder:"Şifre" %>
+    <%= f.password_field :password, autocomplete: "off",placeholder:"Şifre" %>
   </div>
 
   <div class="form-group">
-    <%= f.password_field :password_confirmation, autocomplete: "off",class:"form-control",placeholder:"Şifre Tekrar" %>
+    <%= f.password_field :password_confirmation, autocomplete: "off",placeholder:"Şifre Tekrar" %>
   </div>
 
   <div class="form-group">
-    <%= f.file_field :image,class:"form-control",placeholder:"Bir Profil Resmi" %>
+    <div>
+    <%= f.file_field :image %>
+    </div>
   </div>
   <div class="form-group">
-    <%= f.submit "Kayıt",class:"form-control btn btn-primary",placeholder:"İsminiz" %>
+    <%= f.submit "Kayıt",placeholder:"İsminiz" %>
   </div>
 <% end %>
 </div>
