--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,2 @@
  <%= t('hello') %>
-<p>Burası uygulamanın açılış sayfası. Ana Sayfa için lütfen yukarıdaki 'Ana Sayfa' butonuna tıklayınız.</p>
+<p>Hoşgeldin!!!</p>
